5/24/11 Improved support for the action command, see #2902
5/24/11 Renamed ButtonNode to HTMLImageButtonNode before factoring out a more abstract ButtonNode parent class, see #2902
5/17/11 Made it so the light bulb rays don't intercept mouse events.  I added this since the light rays were getting in the way of the faucet slider in "sugar and salt solutions"
5/14/11 Moved toolbox-related classes to toolbox package from Bending Light for reuse in Sugar and Salt Solutions
5/14/11 Added listeners for the location of the ConductivityTester's bulb and battery, see #2876
5/11/11 fixed probe locations to account for offset of the parent node, see #2876
5/11/11 synchronize ConductivityTesterNode brightness value on init in case it was non-zero
generalized conductivitytesternode to allow non-default colors for use against a black background, see #2864
5/9/11 Moved ConductivityTester and related strings and images from acid-base-solutions to piccolo-phet, see #2864
5/6/2011 Fixed: DefaultIconButton shouldn't send out events when disabled, see #2853
4/27/11 Refactored Function3 to interface to improve readability and make easier to extend
4/27/11 Added convenience constructors to HBox and VBox
4/25/11 Reverted changes to MinimizeMaximizeNode that allowed different button icons, closes #2824
4/24/11 Updated ControlPanelNode to subtract out any local offset of the content node
4/24/11 removed PinnedLayoutNode, closes #2825
4/25/11 Removed 'CVS Info' headers and revision text annotations from class headers in piccolo-phet
4/24/11 Added layout nodes VBox, HBox and their parent Box (moved from bending light)
4/23/11 Generalized MinimizeMaximizeNode to support different images, for use with different backgrounds, see #2824
4/22/11 Refactored measuring tape to facilitate resetting
4/14/11 fix Wavelength control so that it doesn't throw exception when using up/down arrow at the ends of the slider range
4/8/11 Reformatted according to PhET's IntelliJ code style